--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/Anular.cshtml
@@ -1,8 +1,9 @@
-﻿@model Core.Erp.Info.CuentasPorPagar.cp_conciliacionAnticipo_Info
+﻿
+@model Core.Erp.Info.CuentasPorPagar.cp_conciliacionAnticipo_Info
 @{
     /**/
 
-    ViewBag.Title = "Nueva conciliación de anticipo por proveedor";
+    ViewBag.Title = "Anular conciliación de anticipo por proveedor";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -178,9 +179,12 @@
 
 </script>
 
-@using (Html.BeginForm("Nuevo", "ConciliacionAnticipoProveedor", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Anular", "ConciliacionAnticipoProveedor", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdConciliacion, new { @id = "IdConciliacion" })
+    @Html.HiddenFor(q => q.IdCbteCble, new { @id = "IdCbteCble" })
+    @Html.HiddenFor(q => q.IdTipoCbte, new { @id = "IdTipoCbte" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="modal fade" id="Modal_OrdenPago" role="dialog">
         <div class="modal-dialog modal-lg">
@@ -235,7 +239,7 @@
                     <label for="IdTipoCbte">Tipo comprobante</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdTipoCbte, settings =>
                        {
-                           settings.Name = "IdTipoCbte";
+                           settings.Name = "IdTipoCbte1";
                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                            settings.Properties.DisplayFormatString = "[{0}] - {1}";
                            settings.Properties.Columns.Add("IdTipoCbte", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
@@ -249,7 +253,7 @@
                            settings.Properties.NullText = "== Seleccione ==";
                            settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                        }).BindList(ViewBag.lst_tipo_comprobante).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdTipoCbte, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(q => q.IdTipoCbte, "", new { @class = "text-danger"})
                 </div>
             </div>
             <div class="col-md-2">
@@ -375,7 +379,7 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","ConciliacionAnticipoProveedor",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
     </div>
     @section Scripts {
@@ -383,6 +387,10 @@
     }
 }
 <script>
+    $(function () {
+        IdTipoCbte1.SetEnabled(false);
+
+    });
     function armar_diario() {
         if (IdProveedor.GetValue() > 0) {
             var datos = {
