--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/_CmbProveedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/_CmbProveedor.cshtml
@@ -16,7 +16,7 @@
         settings.Properties.ValueType = typeof(decimal);
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.NullText = "== Seleccione ==";
-        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){armar_diario(); }";
+        //settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){armar_diario(); }";
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
