--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/_GridViewPartial_ConciliacionAnticipo_Fact_x_Cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/_GridViewPartial_ConciliacionAnticipo_Fact_x_Cruzar.cshtml
@@ -34,14 +34,21 @@
 
         settings.Columns.Add("IdOrdenPago", "# Orden").Width = Unit.Percentage(10);
         settings.Columns.Add("IdCbteCble_cxp", "# Cbte").Width = Unit.Percentage(10);
-        
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(70);
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "Fecha_cxp";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Width = Unit.Percentage(20);
             column.FieldName = "MontoAplicado";
             column.Caption = "Monto";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
-        });       
+        });
+        settings.Columns.Add("Observacion_cxp", "Observacion").Width = Unit.Percentage(40);
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged_Fact";
         settings.ClientSideEvents.BeginCallback = "OnBeginCallback_Fact";
     });
