--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_004.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_004.cshtml
@@ -108,16 +108,16 @@
                     </div>
                     <div class="col-md-2">
                         <div class="form-group">
-                            <label for="IdNivel">Año</label>
-                            @Html.DropDownListFor(q => q.IdAnio, new SelectList(ViewBag.lst_anio, "IdanioFiscal", "IdanioFiscal"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.IdAnio, "", new { @class = "form", @role = "text-danger" })
+                            <label for="IdPeriodo">Periodo Ini</label>
+                            @Html.DropDownListFor(q => q.IdPeriodoIni, new SelectList(ViewBag.lst_periodo, "IdPeriodo", "AnioMes"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.IdPeriodoIni, "", new { @class = "form", @role = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="form-group">
-                            <label for="IdPeriodo">Periodo</label>
-                            @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodo, "IdPeriodo", "IdPeriodo"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "form", @role = "text-danger" })
+                            <label for="IdPeriodo">Periodo Fin</label>
+                            @Html.DropDownListFor(q => q.IdPeriodoFin, new SelectList(ViewBag.lst_periodo, "IdPeriodo", "AnioMes"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.IdPeriodoFin, "", new { @class = "form", @role = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-2">
