--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TipoMovimiento/Anular.cshtml
@@ -40,7 +40,7 @@
                              settings.Name = "Genera_Diario_Contable";
                              settings.Checked = true;
                              settings.Text = "Se contabiliza";
-                         })
+                         }).GetHtml()
                     </label>
                 </div>
             </div>
