--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/MotivoInventario/Modificar.cshtml
@@ -21,6 +21,19 @@
                     @Html.ValidationMessageFor(q => q.Cod_Motivo_Inv, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <div class="checkbox">
+                        @Html.DevExpress().CheckBoxFor(q => q.Genera_Movi_Inven_bool,
+                         settings =>
+                         {
+                             settings.Name = "Genera_Movi_Inven_bool";
+                             settings.Checked = true;
+                             settings.Text = "Genera movimiento de inventario";
+                         }).GetHtml()
+                </div>
+            </div>
+        </div>
         </div>
     </div>
     <div class="row">
@@ -48,23 +61,6 @@
                     <label for="Codigo">Cuenta Contable</label>
                     @Html.Partial("_CmbCtaCble", Model.IdCtaCble)
                     @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label for="Genera_Movi_Inven_bool">@Html.DevExpress().CheckBoxFor(q => q.Genera_Movi_Inven_bool,
-                         settings =>
-                         {
-                             settings.Name = "Genera_Movi_Inven_bool";
-                             settings.Checked = true;
-                             settings.Text = "Genera movimiento de inventario";
-                         })</label>
-                    </div>
                 </div>
             </div>
         </div>
